--- a/latex/ABSTRACT.tex
+++ b/latex/ABSTRACT.tex
@@ -1,3 +1,3 @@
-Daylight changes over time. Not only the brightness but the colour. As we intuitively recognise, daylight seems fresh (has blueish tint) in the morning and shifts towards yellow near the sunset. The purpose of this research is to collect accurate data against our estimation based on crude naked-eye observation. Using the consumer-grade spectrophotometer facing against a photography-grade grey card, the data were collected every minute. The resulting data somewhat correlates to our common sense, but <<TODO: add contradicting observation against common sense>>. These data can be used to accurately simulate a daylight of real-world within the virtual environment, such as CGI and video games.
+Daylight changes over time. Not only the brightness but the colour. As we intuitively recognise, daylight seems fresh (has blueish tint) in the morning and shifts towards yellow near the sunset. The purpose of this research is to collect accurate data against our estimation based on crude naked-eye observation. Using a consumer-grade colourimeter facing against a photography-grade grey card, the data were collected every minute. The resulting data somewhat correlates to our common sense, but <<TODO: add contradicting observation against common sense>>. These data can be used to accurately simulate a daylight of real-world within the virtual environment, such as CGI and video games.
 
 Keywords: measurements, daylight, colour
