--- a/latex/ACKNOWLEDGEMENT.tex
+++ b/latex/ACKNOWLEDGEMENT.tex
@@ -1,1 +1,1 @@
-I would like to thank my parents for not being mad at me doing all these shenanigans on the window. Also Spartasurplus for selling the equipment for such a nice price, prompt shipping, and their secure packaging.
+I would like to thank my parents for not being mad at me doing all these shenanigans on the window, and taking fishing lines from a fishing rod.
